LogicBuildingSession/Day_2/Assignment 2/Section_1/Snip3/Investigation.txt
Error: 

E:\POST BE\CDAC\PrepCourse\Day 2\Assignment 2\Snip3>javac Snip3E.java
Snip3E.java:1: error: class Main is public, should be declared in a file named Main.java
public class Main {
       ^
1 error

Error Explaination:
As the class Main is public, and the file name does not match with the class name, it should be corrected by renaming the file.

Error Solution:
After renaming the file name to Main.java a new error occurs as follows:

E:\POST BE\CDAC\PrepCourse\Day 2\Assignment 2\Snip3>java Main
Error: Main method must return a value of type void in class Main, please
define the main method as:
   public static void main(String[] args)


So doing necessary changes.

Why is void used in the main method?

The main method in Java is defined as void because it does not return any value to the JVM. Instead of returning an exit code like in C or C++, Java programs use System.exit(status) to terminate with a specific status code. The JVM does not expect a return value from main, and it relies on void to indicate that execution should continue normally unless explicitly terminated.